<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (c) 2013 Lugia Programming Team
    
    Licensed under the Apache License, Version 2.0 (the "License"); 
    you may not use this file except in compliance with the License. 
    You may obtain a copy of the License at 

        http://www.apache.org/licenses/LICENSE-2.0 

    Unless required by applicable law or agreed to in writing, software 
    distributed under the License is distributed on an "AS IS" BASIS, 
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. 
    See the License for the specific language governing permissions and 
    limitations under the License.
 -->
 
<resources>

    <string name="app_name">TimeTable</string>
    <string name="menu_settings">Settings</string>
    
    <string name="font_light">Yaahowu Light.ttf</string>
    <string name="font_medium">Yaahowu.ttf</string>
    <string name="font_bold">Yaahowu Bold.ttf</string>
    
    <string name="text_login">Please enter your MMU ID and Password, the course detail will fetch in second.</string>
    <string name="text_subject_code">Subject Code</string>
    <string name="text_subject_description">Subject Description</string>
    <string name="text_subject_title">Subject Code - Subject Description</string>
    <string name="text_lecture_section">Lecture Section</string>
    <string name="text_tutorial_section">Tutorial Section</string>
    <string name="text_credit_hour">Credit Hour</string>
    <string name="text_name">Name</string>
    <string name="text_section">Section</string>
    <string name="text_day">Day</string>
    <string name="text_time">Time</string>
    <string name="text_room">Room</string>
    <string name="text_venue">Venue</string>
    <string name="text_event_type">Type</string>
    <string name="text_event_note">Note</string>
    <string name="text_no_event">No event</string>
    <string name="text_no_schedule">No schedule</string>
    <string name="text_list_header">Header</string>
    <string name="text_done">Done</string>
    <string name="text_cancel">Cancel</string>

    <string name="label_event_date">DATE</string>
    <string name="label_event_time">TIME</string>
    <string name="label_event_type">TYPE</string>

    <string name="hint_mmu_id">MMU ID</string>
    <string name="hint_password">Password</string>
    <string name="hint_event_name">Event name</string>
    <string name="hint_venue">Venue</string>
    <string name="hint_note">Note</string>
    <string name="hint_date">Date</string>
    <string name="hint_time">Time</string>

    <string name="button_continue">Continue</string>

    <!-- use on time table -->
    <string name="header_time">Time</string>
    <string name="header_subject">Subject</string>
    <string name="header_monday">Mon</string>
    <string name="header_tuesday">Tue</string>
    <string name="header_wednesday">Wed</string>
    <string name="header_thursday">Thu</string>
    <string name="header_friday">Fri</string>
    
    <string-array name="navigation_action_list">
        <item>Day</item>
        <item>Week</item>
        <item>List</item>
    </string-array>
    
    <string-array name="time_string">
        <item>8AM</item>
        <item>9AM</item>
        <item>10AM</item>
        <item>11AM</item>
        <item>12PM</item>
        <item>1PM</item>
        <item>2PM</item>
        <item>3PM</item>
        <item>4PM</item>
        <item>5PM</item>
        <item>6PM</item>
        <item>7PM</item>
        <item>8PM</item>
        <item>9PM</item>
        <item>10PM</item>
    </string-array>
    
    <string-array name="full_time_string">
        <item>12AM</item>
        <item>1AM</item>
        <item>2AM</item>
        <item>3AM</item>
        <item>4AM</item>
        <item>5AM</item>
        <item>6AM</item>
        <item>7AM</item>
        <item>8AM</item>
        <item>9AM</item>
        <item>10AM</item>
        <item>11AM</item>
        <item>12PM</item>
        <item>1PM</item>
        <item>2PM</item>
        <item>3PM</item>
        <item>4PM</item>
        <item>5PM</item>
        <item>6PM</item>
        <item>7PM</item>
        <item>8PM</item>
        <item>9PM</item>
        <item>10PM</item>
        <item>11PM</item>
    </string-array>
    
    <string-array name="day_string">
        <item>SUN</item>
        <item>MON</item>
        <item>TUE</item>
        <item>WED</item>
        <item>THU</item>
        <item>FRI</item>
        <item>SAT</item>
    </string-array>
    
    <string-array name="day_long_string">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>
    
    <string name="action_open_file">Open File</string>
    <string name="action_download_data">Download Data</string>
    <string name="action_settings">Settings</string>
    <string name="action_new_event">New event</string>
    <string name="action_edit_event">Edit event</string>
    <string name="action_delete_event">Delete event</string>
    
    <string name="title_activity_subject_list">Subject List</string>
    <string name="title_activity_subject_detail">Subject Detail</string>
    <string name="title_activity_new_event">New Event</string>
    <string name="title_activity_master">Time Table</string>
    <string name="title_activity_login">Download Course Data</string>
    <string name="title_activity_setting">Settings</string>
    
    <string name="preference_notification_title">Notification</string>
    <string name="preference_notify_sound_title">Sound</string>
    <string name="preference_notify_vibrate_title">Vibrate</string>
    <string name="preference_notify_before_title">Notify before</string>
    

    <string-array name="event_type_string">
        <item>Class replacement</item>
        <item>Homework</item>
        <item>Assignment due date</item>
        <item>Presentation</item>
        <item>Quiz / Test / Exam</item>
    </string-array>

    <string-array name="preference_notify_before_entries">
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>15 minutes</item>
        <item>20 minutes</item>
        <item>25 minutes</item>
        <item>30 minutes</item>
        <item>45 minutes</item>
        <item>1 hours</item>
        <item>2 hours</item>
    </string-array>
    
    <string-array name="preference_notify_before_values">
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
        <item>45</item>
        <item>60</item>
        <item>120</item>
    </string-array>
    
</resources>