<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (c) 2013 Lugia Programming Team
    
    Licensed under the Apache License, Version 2.0 (the "License"); 
    you may not use this file except in compliance with the License. 
    You may obtain a copy of the License at 

        http://www.apache.org/licenses/LICENSE-2.0 

    Unless required by applicable law or agreed to in writing, software 
    distributed under the License is distributed on an "AS IS" BASIS, 
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. 
    See the License for the specific language governing permissions and 
    limitations under the License.
 -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    
    <PreferenceCategory
        android:key="preference_reminder_category"
        android:title="Reminder">
        
        <CheckBoxPreference
            android:key="preference_notification"
            android:title="@string/preference_notification_title" 
            android:defaultValue="false"
        />
        
        <RingtonePreference
            android:layout="?android:attr/preferenceLayoutChild"
            android:key="preference_notify_sound"
            android:title="@string/preference_notify_sound_title"
            android:ringtoneType="notification"
            android:defaultValue="content://settings/system/notification_sound"
        />
        
        <CheckBoxPreference
            android:layout="?android:attr/preferenceLayoutChild"
            android:key="preference_notify_vibrate"
            android:title="@string/preference_notify_vibrate_title"
            android:defaultValue="false"
        />
        
        <ListPreference
            android:key="preference_notify_before"
            android:title="@string/preference_notify_before_title"
            android:defaultValue="15"
            android:entries="@array/preference_notify_before_entries"
            android:entryValues="@array/preference_notify_before_values"
            android:dialogTitle="@string/preference_notify_before_title"
        />
        
    </PreferenceCategory>    

</PreferenceScreen>